fix: resolve PostgreSQL type inference and stale mock failures in tests
- Fix PokRepository searchPoks JPQL query: use CAST(:keyword AS string)
  to give PostgreSQL a type hint when keyword is null, preventing
  'function lower(bytea) does not exist' error
- Replace (:param IS NULL OR ...) date patterns with COALESCE(:param, p.column)
  to avoid 'could not determine data type of parameter $N' PostgreSQL error
- Fix PokControllerTest: update list/pagination stubs from pokService.getAll()
  to pokService.search() to match the controller's actual method call
- Fix PokRepositoryTest: add missing Instant import, fix variable name typo,
  use List.getFirst() instead of get(0)
- Make Pok.setCreatedAt/setUpdatedAt public (required by repository tests)

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>